--- a/style.css
+++ b/style.css
@@ -3,11 +3,67 @@
   padding: 0px;
 }
 
-body {
-  background-color: cornflowerblue;
+#introduction {
+  margin: 2% 2%;
+  background-color: greenyellow;
+  border: 2px darkblue dotted;
+}
+#introduction h1 {
+  text-align: center;
+  margin: 5px 0px 15px 0px;
+}
+
+#introduction p {
+  padding: 10px 0px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+#introduction img {
+  margin: 0px auto;
+  padding: 0px 25%;
+  width: 360px;
+  height: 360px;
 }
 
 #doggoAndTheChicks {
-  padding: 20px 20px;
-  background-color: beige;
+  margin: 15px 2%;
+  background-color: lavender;
+  border: 2px darkblue dotted;
+  border-radius: 5px;
+}
+#doggoAndTheChicks h3 {
+  padding: 10px 0px;
+  text-align: center;
+}
+#doggoAndTheChicks p {
+  text-align: center;
+
+}
+#doggoAndTheChicks section {
+  display: flex;
+}
+#doggoAndTheChicks div {
+  box-sizing: border-box;
+  margin: 10px auto;
+  width: 360px;
+  background-color: antiquewhite;
+  border: 0.5px solid black;
+  border-radius: 3px;
+  box-shadow: 2px 2px grey;
+}
+#doggoAndTheChicks div img {
+  border: 1px black solid;
+  box-sizing: border-box;
+  margin: 10px 20px;
+  width: 320px;
+  height: 320px;
+}
+
+#doggoAndTheChicks div figcaption {
+  font-style: italic;
+  text-align: justify;
+  margin: 5px 5px;
+  padding: 5px 5px;
 }
